# pico_w-mqtt

./: 1remote.sh  3remotes.sh  6remotes.sh  CMakeLists.txt  additional-files.txt  build_cli.sh  exe-ocd.sh  pico-cmd  pico-cmd-0  pico-cmd-1  pico-cmd-2  pico-cmd-3  pico-cmd-4  pico-cmd-5  pico-cmd-6  pico-cmd-7  pico-cmd-8  pico-cmd-9  pico-cmd-C  pico-cmd-F  pico-cmd-alarm  pico-cmd-close  pico-cmd-open  pico-cmd-reset  pub-time
doc/: bookwormbullseye.odp  debugALL.txt  info.txt  info_1.txt  mqtt-prototypes.txt  mqtt_snooper.txt  notes-060123-1.txt  notes-081423.txt  notes-pi4-20-081423.txt  notes.txt  pico-sdk-chgs.txt  pico_w-debug.odt  picostatus.xlsx
pi_tcp_tests/: client.c  notes.txt  notes_pico_w.txt  server.c
pico_w/: CMakeLists.txt
pico_w/wifi/: CMakeLists.txt  lwipopts_examples_common.h
pico_w/wifi/cir_buf/: CMakeLists.txt
pico_w/wifi/cir_buf/cir-buf-lib/: head-tail.c  head-tail.h
pico_w/wifi/freertos/: CMakeLists.txt
pico_w/wifi/freertos/iperf/: CMakeLists.txt  head_tail.c  head_tail.h  lwipopts.h  mqtt_extra.h  picow_freertos_iperf.c  picow_freertos_iperf.c.ntp  tcp_debug.c  tcp_debug.h
uf2-file-for-alamo/: remote5.uf2
wifi-alamo/: dhcpcd.conf  dnsmasq.conf  hostapd.conf  iptables.ipv4.nat
